[gd_scene load_steps=8 format=2]

[ext_resource path="res://native/Editor.gdns" type="Script" id=1]
[ext_resource path="res://scene/Main.gd" type="Script" id=2]
[ext_resource path="res://component/Camera.tscn" type="PackedScene" id=3]

[sub_resource type="InputEventAction" id=1]
action = "select_mode"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "generate_mode"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="Editor" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 42.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 20 )
text = "Hide"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.01
anchor_top = 0.08
anchor_right = 0.05
anchor_bottom = 0.1
margin_left = -0.200001
margin_right = 105.8
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Export" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 174.0
margin_bottom = 20.0
text = "Export"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 24.0
margin_right = 174.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportSystems" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 174.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Import Systems"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 48.0
margin_right = 174.0
margin_bottom = 52.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 56.0
margin_right = 174.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 20.0
toggle_mode = true
pressed = true
shortcut = SubResource( 2 )
text = "Select (Q)"

[node name="Generate" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 78.0
margin_right = 168.0
margin_bottom = 20.0
toggle_mode = true
shortcut = SubResource( 4 )
text = "Generate (E)"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 80.0
margin_right = 174.0
margin_bottom = 84.0

[node name="RadiusMin" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 88.0
margin_right = 174.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/RadiusMin"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Radius min:"

[node name="RadiusMin" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/RadiusMin"]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 24.0
text = "32"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadiusMax" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 116.0
margin_right = 174.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/RadiusMax"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Radius max:"

[node name="RadiusMax" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/RadiusMax"]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 24.0
text = "64"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Try" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 144.0
margin_right = 174.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Try"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Num gen try:"

[node name="Try" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Try"]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 24.0
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 172.0
margin_right = 174.0
margin_bottom = 196.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Size"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Brush Size:"

[node name="Size" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Size"]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 24.0
text = "512"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinDistance" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 200.0
margin_right = 174.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/MinDistance"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Min distance:"

[node name="MinDistance" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/MinDistance"]
margin_left = 116.0
margin_right = 174.0
margin_bottom = 24.0
text = "512"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 0.9
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_top = 13.0
margin_right = 103.0
margin_bottom = 27.0
text = "Time multiplier:"

[node name="TimeMultiplier" type="LineEdit" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 107.0
margin_right = 165.0
margin_bottom = 40.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 40.0

[node name="Tick" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 177.0
margin_top = 13.0
margin_right = 210.0
margin_bottom = 27.0
text = "Tick: "

[node name="SetTick" type="LineEdit" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 214.0
margin_right = 272.0
margin_bottom = 40.0
placeholder_text = "set tick"

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 276.0
margin_right = 280.0
margin_bottom = 40.0

[node name="NumSystem" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 284.0
margin_top = 13.0
margin_right = 292.0
margin_bottom = 27.0
text = ":)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 296.0
margin_right = 300.0
margin_bottom = 40.0

[node name="Bound" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 304.0
margin_top = 13.0
margin_right = 344.0
margin_bottom = 27.0
text = "bound"

[node name="Save" type="FileDialog" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -170.0
margin_right = 350.0
margin_bottom = 170.0
rect_min_size = Vector2( 700, 340 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
dialog_hide_on_ok = true
access = 2
current_dir = "/home/username/dev/eos/editor/godot"
current_path = "/home/username/dev/eos/editor/godot/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="FileDialog" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -170.0
margin_right = 350.0
margin_bottom = 170.0
rect_min_size = Vector2( 700, 340 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.bin" )
current_dir = "/home/username/dev/eos/editor/godot"
current_path = "/home/username/dev/eos/editor/godot/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/Hide" to="." method="_on_Hide_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ImportSystems" to="." method="_on_ImportSystems_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/Generate" to="." method="_on_Generate_pressed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/RadiusMin/RadiusMin" to="." method="_on_RadiusMin_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/RadiusMax/RadiusMax" to="." method="_on_RadiusMax_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Try/Try" to="." method="_on_Try_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Size/Size" to="." method="_on_Size_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/MinDistance/MinDistance" to="." method="_on_MinDistance_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/HBoxContainer/TimeMultiplier" to="." method="_on_TimeMultiplier_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/HBoxContainer/SetTick" to="." method="_on_SetTick_text_changed"]
[connection signal="confirmed" from="CanvasLayer/Control/Save" to="." method="_on_Save_confirmed"]
[connection signal="confirmed" from="CanvasLayer/Control/Load" to="." method="_on_Load_confirmed"]
